# pypwncollege

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt  script.py
.github/workflows/: python-publish.yml  tests.yml
docs/: challenge.rst  conf.py  errors.rst  index.rst  leaderboard.rst  pwn.rst  user.rst
examples/: __init__.py  base.py  leaderboards.py  spawn_challenge.py
pwncollege/: __init__.py  challenge.py  constants.py  errors.py  leaderboard.py  pwncollege.py  user.py  utils.py
pwncollege/pwncli/: __init__.py  challenge.py  get.py  profile.py
tests/: test_all.py  test_cli.py  test_leaderboard.py  test_login.py
